--- a/styleSheet.css
+++ b/styleSheet.css
@@ -15,4 +15,9 @@ h1{
 }
 table {
 	text-align: center;
+	border: solid 2px #1fc8db;
+}
+td {
+	padding: 10px 30px 0px 30px;
+	border: sold .5px #1fc8db;
 }
