--- a/weather.css
+++ b/weather.css
@@ -1,10 +1,11 @@
-body{
-	background: red;
-}
+
 
 .fiveDayFlex{
 	display: flex;
-
+	flex-direction: row;
+	justify-content: center;
+	height: 200px;
+	align-items: center;
 }
 .theCard{
 	background: #333;
