--- a/weather.css
+++ b/weather.css
@@ -1,5 +1,9 @@
 
-
+.mainDisplay{
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(8, 1fr);
+}
 .fiveDayFlex{
 	display: flex;
 	flex-direction: row;
@@ -11,5 +15,11 @@
 	background: #333;
 }
 .day{
-	background: #333;
+	background-color: rgba(51, 51, 51, 1);/*#333 but needed to not have opacity affect children*/
+	margin: 10px;
+	padding: 20px;
+	min-width: 50px;
+	min-height: 80px;
+	opacity: .6;
+
 }
