--- a/weather.css
+++ b/weather.css
@@ -4,6 +4,16 @@
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(8, 1fr);
 }
+.mainContainer {
+	perspective: 1000px;
+    position: absolute;
+    width: 250px;
+    height: 320px;
+    background: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .fiveDayFlex{
 	display: flex;
 	flex-direction: row;
@@ -11,9 +21,67 @@
 	height: 200px;
 	align-items: center;
 }
-.theCard{
-	background: #333;
-}
+.theCard {
+		position: relative;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 20px;
+		transform-style: preserve-3d;
+		transition: all 0.8s ease;
+		
+	}
+
+	.theCard:hover {
+		transform: rotateY(180deg);
+	}
+
+	.theFront {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		backface-visibility: hidden;
+		overflow: hidden;
+		/*background: #ffc728;*/
+		background: rgba(51, 51, 51, 1);
+		opacity: .5;
+		color: #fff;
+		text-align: center;
+		border-radius: 20px;
+		font-size: 18px;
+		font-weight: bold;
+	}
+
+	.theBack {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		backface-visibility: hidden;
+		/*background: #fafafa;*/
+		background: rgba(51, 51, 51, 1);
+		opacity: .5;
+		color: #fff;
+		transform: rotateY(180deg);
+		text-align: center;
+		border-radius: 20px;
+		font-size: 18px;
+		font-weight: bold;
+	}
+
+	.theFront h1, .theBack h1 {
+		padding-top: 20%;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	.theFront p, .theBack p {
+		padding-top: 5%;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 .day{
 	background-color: rgba(51, 51, 51, 1);/*#333 but needed to not have opacity affect children*/
 	margin: 10px;
@@ -22,4 +90,12 @@
 	min-height: 80px;
 	opacity: .6;
 
+}
+.fiveDayFlex{
+	    grid-row: 7/8;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 200px;
+    align-items: center;
 }
