--- a/weather.css
+++ b/weather.css
@@ -15,16 +15,20 @@ body{
     width: 250px;
     height: 320px;
     background: none;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 .fiveDayFlex{
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	height: 200px;
-	align-items: center;
+	position: absolute;
+    top: 60%;
+    left: 10%;
+    right: 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 200px;
+    align-items: center;
 }
 .theCard {
 		position: relative;
