--- a/weather.css
+++ b/weather.css
@@ -77,7 +77,7 @@ body{
 		backface-visibility: hidden;
 		/*background: #fafafa;*/
 		background: rgba(51, 51, 51, 1);
-		opacity: .5;
+		opacity: .3;
 		color: #fff;
 		transform: rotateY(180deg);
 		text-align: center;
@@ -87,14 +87,14 @@ body{
 	}
 	#location{
 		font-size: 2.3em;
-    	margin-bottom: 0;
+    	margin-bottom: 5px;
 	}
 	#timeAndDate{
 		margin: 0;
     	padding: 2px;
 	}
 	#currentTemp{
-		margin-top: 10px;
+		margin: 0px;
     	font-size: 6em;
 	}
 
@@ -122,7 +122,7 @@ body{
     margin: 10px;
     min-width: 50px;
     min-height: 80px;
-    opacity: .6;
+    opacity: .3;
     width: 150px;
     height: 200px;
 
