--- a/weather.css
+++ b/weather.css
@@ -85,11 +85,11 @@ body{
 		font-size: 18px;
 		font-weight: bold;
 	}
-	#location{
+	#location, #backCardCity{
 		font-size: 2.3em;
     	margin-bottom: 5px;
 	}
-	#timeAndDate{
+	#timeAndDate, #description{
 		margin: 0;
     	padding: 2px;
 	}
