--- a/weather.css
+++ b/weather.css
@@ -84,6 +84,10 @@ body{
 		border-radius: 20px;
 		font-size: 18px;
 		font-weight: bold;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
 	}
 	#location, #backCardCity{
 		font-size: 2.3em;
