--- a/weather.css
+++ b/weather.css
@@ -1,11 +1,46 @@
-body{
-	margin: 0;
+*{
 	padding: 0;
+	margin: 0;
 	font-family: 'Catamaran', sans-serif;
 }
+body{
+	background: #000;
+	
+}
+/**** INTRO PAGE ******/
+.intro {
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%
+	transform: translate(-50%, -50%);
+	width: 100%;
+}
+.intro span{
+	color: white;
+	text-transform: uppercase;
+	display: block;
+}
+.text1{
+	color: #fff;
+	font-size: 60px;
+	font-weight: 700;
+	letter-spacing: 8px;
+	margin-bottom: -40px;
+
+
+}
+.text2{
+	font-size: 30px;
+	color: #4155c1;
+}
+
+
+/**** MAIN WEATHER PAGE ******/
 .mainWrapper{
 	width: 100vw;
 	height: 90vw;
+	display: none;
 }
 .mainContainer {
 	perspective: 1000px;
