--- a/weather.css
+++ b/weather.css
@@ -27,6 +27,9 @@ body{
 	font-weight: 700;
 	letter-spacing: 8px;
 	margin-bottom: -40px;
+	background: black;
+	position: relative;
+	animation: text 3s 1;
 
 
 }
@@ -35,6 +38,20 @@ body{
 	color: #4155c1;
 }
 
+@keyframes text {
+	0%{
+		color: black;
+		margin-bottom: -40px;
+	}
+	30%{
+		letter-spacing: 25px;
+		margin-bottom: -40px;
+	}
+	85% {
+		letter-spacing: 8px;
+		margin-bottom: -40px;
+	}
+}
 
 /**** MAIN WEATHER PAGE ******/
 .mainWrapper{
