--- a/weather.css
+++ b/weather.css
@@ -25,7 +25,7 @@ body{
 	font-size: 60px;
 	font-weight: 700;
 	letter-spacing: 8px;
-	margin-bottom: -40px;
+	margin-bottom: 20px;
 	background: black;
 	position: relative;
 	animation: text 3s 1;
@@ -34,7 +34,7 @@ body{
 }
 .text2{
 	font-size: 30px;
-	color: #4155c1;
+	color: #41BBC1;
 }
 
 @keyframes text {
