--- a/weather.css
+++ b/weather.css
@@ -36,6 +36,18 @@ body{
 	font-size: 30px;
 	color: #41BBC1;
 }
+.searchbar{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background:#41BBC1;
+	height: 40px;
+	border-radius: 40px;
+	padding: 10px;
+
+
+}
 
 @keyframes text {
 	0%{
@@ -50,6 +62,11 @@ body{
 		letter-spacing: 8px;
 		margin-bottom: -40px;
 	}
+}
+/***** SEARCH BAR *************/
+.searchbar{
+	position: relative;
+
 }
 
 /**** MAIN WEATHER PAGE ******/
