--- a/weather.css
+++ b/weather.css
@@ -35,6 +35,7 @@ body{
 .text2{
 	font-size: 30px;
 	color: #41BBC1;
+	margin-bottom: 50px;
 }
 .searchbar{
 	position: absolute;
@@ -45,6 +46,7 @@ body{
 	height: 40px;
 	border-radius: 40px;
 	padding: 10px;
+	width: 150px;
 
 
 }
