--- a/weather.css
+++ b/weather.css
@@ -51,7 +51,29 @@ body{
 
 
 }
+.searchBtn{
+	color: #fff;
+	float: right;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background: #41BBC1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	animation: search 3s 1;
+}
+@keyframes search{
+	0%{
+		opacity: 0;
+		margin-top: -40px;
+	}
+	40%{
+		opacity: 1;
+		transform: translateY(50px);
+	
 
+}
 @keyframes text {
 	0%{
 		color: black;
