--- a/weather.css
+++ b/weather.css
@@ -39,10 +39,10 @@ body{
 	background: black;
 }
 .searchbar{
+	z-index: -1;
 	position: absolute;
-	top: 50%;
+	top: 80%;
 	left: 50%;
-	transform: translate(-50%, -50%);
 	background:#41BBC1;
 	height: 40px;
 	border-radius: 40px;
@@ -53,7 +53,7 @@ body{
 
 }
 .searchBtn{
-	z-index: -1;
+	
 	color: #fff;
 	float: right;
 	width: 40px;
@@ -72,7 +72,10 @@ body{
 	}
 	40%{
 		opacity: 1;
+		margin-top: 0px;
 		transform: translateY(50px);
+	}
+	
 	
 
 }
