tweak animation search

--- a/weather.css
+++ b/weather.css
@@ -73,9 +73,9 @@ body{
 	40%{
 		opacity: 1;
 		margin-top: 0px;
-		transform: translateY(50px);
+		transform: translateY(80px, -20px );
 	}
-	
+
 	
 
 }
