--- a/weather.css
+++ b/weather.css
@@ -12,7 +12,7 @@ body{
 	text-align: center;
 	position: absolute;
 	top: 50%;
-	left: 30%
+	
 	transform: translate(-50%, -50%);
 	width: 100%;
 }
@@ -42,13 +42,15 @@ body{
 	z-index: -1;
 	position: absolute;
 	top: 80%;
-	left: 50%;
+	left: 45%;
 	background:#41BBC1;
 	height: 40px;
 	border-radius: 40px;
 	padding: 10px;
 	width: 150px;
 	animation: search 3s 1;
+	animation-delay: 2.7s;
+	visibility: hidden;
 
 
 }
@@ -57,7 +59,7 @@ body{
 	color: #fff;
 	float: right;
 	width: 40px;
-	height: 40px;
+	height: 30px;
 	border-radius: 50%;
 	background: #41BBC1;
 	display: flex;
