--- a/weather.css
+++ b/weather.css
@@ -82,7 +82,17 @@ body{
 	justify-content: center;
 	align-items: center;
 }
-
+.searchText{
+	border: none;
+	background: none;
+	outline:none;
+	float: left;
+	padding: 0;
+	color: white;
+	font-size: 1em;
+	transition: 0.4s;
+	width: 240px;
+}
 
 @keyframes search{
 	0%{
