--- a/weather.css
+++ b/weather.css
@@ -36,7 +36,7 @@ body{
 	font-size: 30px;
 	color: #41BBC1;
 	margin-bottom: 50px;
-	/*background: black;*/
+	background: black;
 }
 
 @keyframes text {
@@ -100,7 +100,7 @@ body{
 		margin-top: -40px;
 	}
 	40%{
-		opacity: 1;
+		visibility: visible;
 		margin-top: 0px;
 		transform: translateY(80px, -20px );
 	}
