--- a/weather.css
+++ b/weather.css
@@ -64,8 +64,9 @@ body{
 	border-radius: 40px;
 	padding: 10px;
 	width: 150px;
-	animation: search 3s 1;
+	animation: slide-down ease 3s forward;
 	animation-delay: 3s;
+	opacity: 0;
 	
 
 
@@ -94,15 +95,14 @@ body{
 	width: 240px;
 }
 
-@keyframes search{
-	0% {
-    visibility: hidden;
-    margin-top: -40px;
+@keyframes slide-down{
+	from {
+	    opacity: 0;
+	    margin-top: -40px;
 	}
-
-	40% {
-    
-    margin-top: 10px;
+	to{
+		opacity: 1;
+		transform: translateY(50px);
 	}
 	
 
