--- a/weather.css
+++ b/weather.css
@@ -64,8 +64,7 @@ body{
 	border-radius: 40px;
 	padding: 10px;
 	width: 200px;
-	animation: slide-down ease 3s forward;
-	animation-delay: 3s;
+	animation: slideDown 3s ease 3s 1 forward;
 	opacity: 0;
 	display: flex;
 	justify-content: center;
@@ -100,7 +99,7 @@ body{
 	width: 240px;
 }
 
-@keyframes slide-down{
+@keyframes slideDown{
 	from {
 	    opacity: 0;
 	    margin-top: -40px;
