--- a/weather.css
+++ b/weather.css
@@ -64,7 +64,7 @@ body{
 	border-radius: 40px;
 	padding: 10px;
 	width: 200px;
-	animation: slideDown 3s ease 3s 1 forward;
+	animation: slideDown ease 3s 1 forward;
 	opacity: 0;
 	display: flex;
 	justify-content: center;
