add duration to animation

--- a/weather.css
+++ b/weather.css
@@ -64,7 +64,7 @@ body{
 	border-radius: 40px;
 	padding: 10px;
 	width: 200px;
-	animation: slideDown ease 3s 1 forwards;
+	animation: slideDown 32 ease 3s 1 forwards;
 	opacity: 0;
 	display: flex;
 	justify-content: center;
