--- a/weather.css
+++ b/weather.css
@@ -96,43 +96,14 @@ body{
 }
 
 @keyframes slideDown{
-	0% {
+	from{
 	    opacity: 0;
 	    margin-top: -80px;
 	}
-	12%{
-		opacity: 1;
-		margin-top: -40px;
-	}
-	24%{
-		opacity: 1;
-		margin-top: -20px;
-	}
-	36%{
+	to{
 		opacity: 1;
 		margin-top: 0px;
 	}
-	48%{
-		opacity: 1;
-		margin-top: 20px;
-	}
-	60%{
-		opacity: 1;
-		margin-top: 40px;
-	}
-	72%{
-		opacity: 1;
-		margin-top: 20px;
-	}
-	84%{
-		opacity: 1;
-		margin-top: 10px;
-	}
-	100%{
-		opacity: 1;
-		margin-top: 0px;
-	}
-
 }
 /**** MAIN WEATHER PAGE ******/
 .mainWrapper{
