--- a/weather.css
+++ b/weather.css
@@ -89,10 +89,11 @@ body{
 	outline:none;
 	float: left;
 	padding: 0;
+	padding-left: 30px;
 	color: white;
-	font-size: 1em;
+	font-size: 1.3em;
 	transition: 0.4s;
-	width: 240px;
+	width: 100%;
 }
 
 @keyframes slideDown{
