--- a/weather.css
+++ b/weather.css
@@ -9,6 +9,8 @@ body{
 }
 /**** INTRO PAGE ******/
 .intro {
+	transition: opacity 1s;
+	opacity: 0;
 	text-align: center;
 	position: absolute;
 	top: 50%;
