--- a/weather.css
+++ b/weather.css
@@ -9,7 +9,7 @@ body{
 }
 /**** INTRO PAGE ******/
 #welcome {
-	transition: opacity 1s;
+	/*transition: opacity 1s;*/
 	/*opacity: 0;*/
 	text-align: center;
 	position: absolute;
