--- a/weather.css
+++ b/weather.css
@@ -80,6 +80,7 @@ body{
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
+	border-color: #41BBC1;
 	background: #41BBC1;
 	display: flex;
 	justify-content: center;
