--- a/weather.css
+++ b/weather.css
@@ -80,7 +80,7 @@ body{
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-	border-color: #41BBC1;
+	border: none;
 	background: #41BBC1;
 	display: flex;
 	justify-content: center;
@@ -96,7 +96,7 @@ body{
 	color: white;
 	font-size: 1.3em;
 	transition: 0.4s;
-	width: 100%;
+	width: 80%;
 }
 
 
