--- a/weather.css
+++ b/weather.css
@@ -86,6 +86,9 @@ body{
 	justify-content: center;
 	align-items: center;
 }
+.searchBtn:hover{
+	color: #B8B8B8;
+}
 #searchText{
 	border: none;
 	background: none;
