--- a/weatherApp.css
+++ b/weatherApp.css
@@ -108,7 +108,7 @@ body{
 	position: absolute;
 	top: 20px;
 	left: 85%;
-	transform: translate(-50%, -50%);
+	transform: translateX(-50%);
 	background: #41BBC1;
 	height: 40px;
 	border-radius: 40px;
