--- a/weatherApp.css
+++ b/weatherApp.css
@@ -204,9 +204,8 @@ body{
 		backface-visibility: hidden;
 		overflow: hidden;
 		/*background: #ffc728;*/
-		background: rgba(51, 51, 51, 1);
-		opacity: .3;
-		color: #fff;
+		background-color: rgba(1,1,1,.2);
+    	color: rgba(255, 255, 255, 1);
 		text-align: center;
 		border-radius: 20px;
 		font-size: 18px;
@@ -219,9 +218,8 @@ body{
 		height: 100%;
 		backface-visibility: hidden;
 		/*background: #fafafa;*/
-		background: rgba(51, 51, 51, 1);
-		opacity: .3;
-		color: #fff;
+		background-color: rgba(1,1,1,.2);
+		color: rgba(255, 255, 255, 1);
 		transform: rotateY(180deg);
 		text-align: center;
 		border-radius: 20px;
