rmv back card items

--- a/weatherApp.css
+++ b/weatherApp.css
@@ -280,12 +280,12 @@ body{
 	top: 10%;
 	left: 50%;
 }
-.temp{
+.icon{
 	position: absolute;
 	top:30%; 
 	left: 50%;
 }
-.theBackFive{
+.temp{
 	position: absolute;
 	top: 70%;
 	left: 50%;
