move background image to div

--- a/weatherApp.css
+++ b/weatherApp.css
@@ -8,6 +8,18 @@ body{
 	color: rgba(255, 255, 255, 1);
 	
 }
+#bg{
+	/* The image used */
+  background-image: none;
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /**** INTRO PAGE ******/
 #welcome {
 	/*transition: opacity 1s;*/
