--- a/weatherAnimations.css
+++ b/weatherAnimations.css
@@ -9,7 +9,7 @@
 .rain{
   color: skyblue;
   position: absolute;
- z-index: -1;
+ /*z-index: -1;*/
 } */
 
 #drop2{
@@ -64,7 +64,7 @@
 .lightening{
   color: #FDEB00;
   position: absolute;
-  z-index: -1;
+  /*z-index: -1;*/
   transform: rotate(-30deg);
 }
 #bolt{
@@ -122,7 +122,7 @@
 .snow{
   color: skyblue;
   position: absolute;
-  z-index: -1;
+  /*z-index: -1;*/
 }
 
 #drop2{
@@ -165,7 +165,7 @@
   animation-name: slide;
   animation-duration: 4s;
   animation-iteration-count: infinite;
-  z-index: -1;
+  /*z-index: -1;*/
   top: 20px;
   left: 20px;
 }
