--- a/weatherAnimations.css
+++ b/weatherAnimations.css
@@ -178,12 +178,13 @@
   /*z-index: -1;*/
   top: 20px;
   left: 20px;
-  padding-left: 30%;
+  
 }
 .cloud2 {
   color: #fff;
   position: absolute;
   top: 30px;
+  padding-left: 20px;
 }
 @keyframes slide {
   0% {left: 20px; top: 20px}
