--- a/weatherAnimations.css
+++ b/weatherAnimations.css
@@ -70,7 +70,7 @@
 .lightening{
   color: #FDEB00;
   position: absolute;
-  /*z-index: -1;*/
+  z-index: initial;
   transform: rotate(-30deg);
   /*padding-left: 30%;*/
 }
@@ -80,6 +80,7 @@
   margin-top: 35px;
   /*margin-top: 30px;*/
   /*padding-left: 20px;*/
+  z-index: -1;
   animation: strike 3s ease .6s infinite backwards;
 }
 /*#bolt2{
